Made the Tas bar accessible

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <a class="nav-link" href="#">Ian</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled">Tas</a>
+          <a class="nav-link" href="#">Tas</a>
         </li>
       </ul>
     </div>
