Renamed the Login page title and header.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>My BCIT Project</title>
+  <title>VMA - Volunteer Management App</title>
   <meta name="comp1800 boilerplate code" content="my bcit project">
   <meta name="author" content="BCIT">
 
@@ -21,6 +21,7 @@
 
 <body>
 
+  <!-- Navigation Bar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-info">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Navbar</a>
@@ -47,14 +48,12 @@
     </div>
   </nav>
 
+  <!-- Login Sign-up page Header -->
   <div class="jumbotron">
-    <h1 class="display-4">Olympic Volunteer Management App</h1>
-    <p class="lead">We're here to help all volunteers with their volunteer needs!</p>
+    <h1 class="display-4">VMA - Volunteer Management App</h1>
+    <p class="lead">Creating a smooth experience for organizations and volunteers alike!</p>
     <hr class="my-4">
-    <p>Our team, BBY-13, is developing an app to help volunteers to better coordinate themselves
-      by allowing them to see schedules and notifications. Volunteers are the underlying belly of the Olympics,
-      they help in the shadows to make
-      sure everything goes smoothly. We dedicate this app to them!</p>
+    <p>This is a web application that helps users organize and apply for tasks that require volunteers.</p>
     <p class="lead">
       <a class="btn btn-primary btn-lg" href="#" role="button">Login / Sign-up</a>
     </p>
