Renamed the navbar and changed the colors.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 
   <!-- Navigation Bar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-info">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Navbar</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -35,13 +35,22 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Eugene</a>
+            <a class="nav-link" href="#">All Tasks</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Ian</a>
+            <a class="nav-link" href="#">Notifications</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Tas</a>
+            <a class="nav-link" href="#">Calendar</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Posts</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Training</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Feedback</a>
           </li>
         </ul>
       </div>
@@ -55,14 +64,14 @@
     <hr class="my-4">
     <p>This is a web application that helps users organize and apply for tasks that require volunteers.</p>
     <p class="lead">
-      <a class="btn btn-primary btn-lg" href="#" role="button">Login / Sign-up</a>
+      <a class="btn btn-light btn-lg" href="#" role="button">Login / Sign-up</a>
     </p>
   </div>
 
   <!--sticky footer with icons-->
   <div class="fixed-bottom py-3 bg-info">
     <div class="container text-center">
-      <footer class="navbar justify-content-evenly bg-info fixed-bottom">
+      <footer class="navbar justify-content-evenly bg-light fixed-bottom">
         <i class="material-icons md-48">star</i>
         <i class="material-icons md-48">home</i>
         <i class="material-icons md-48">map</i>
