--- a/main.html
+++ b/main.html
@@ -3,9 +3,11 @@
 
 <head>
     <title>My BCIT Project</title>
-    <meta name="Volunteer Management App Index" content="VMA Index">
-    <meta name="author" content="BBY13">
-
+    <meta name="Volunteer Management App Main" content="VMA Main">
+    <meta name="author" content="BBY13"
+    <!------------------------>
+    <!-- Required meta tags -->
+    <!------------------------>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -37,32 +39,17 @@
 </head>
 
 <body>
+    <!------------------------------>
     
-    <!-- our own navbar goes here -->
+     <!-- our own navbar goes here -->
     <nav id="navbar"></nav>
 
-    <!-- Login Sign-up page Header -->
-  <div class="jumbotron">
-    <h1 class="display-4">VMA - Volunteer Management App</h1>
-    <p class="lead">Creating a smooth experience for organizations and volunteers alike!</p>
-    <hr class="my-4">
-    <p>This is a web application that helps users organize and apply for tasks that require volunteers.</p>
-    <p class="lead">
-      <a class="btn btn-light btn-lg" href="login.html" role="button">Login / Sign-up</a>
-    </p>
-  </div>
-
-  <!--sticky footer with icons-->
-  <div class="fixed-bottom py-3 bg-info">
-    <div class="container text-center">
-      <footer class="navbar justify-content-evenly bg-light fixed-bottom">
-        <i class="material-icons md-48">star</i>
-        <i class="material-icons md-48">home</i>
-        <i class="material-icons md-48">map</i>
-      </footer>
+    <div class="container-fluid bg-light text-dark p-5">
+        <div class="container bg-light p-5">
+            <h1 class="display-4">Welcome</h1>
+        </div>
     </div>
-  </div>
-
+    <!------------------------------>
 
     <!-- our own footer goes here-->
     <nav id="footer"></nav>
@@ -73,7 +60,7 @@
     <script src="./scripts/firebaseAPI.js"></script>
     <script src="./scripts/skeleton.js"></script>
     <script src="./scripts/script.js"></script>
-    <script src="./scripts/authentication"></script>
+    <script src="./scripts/authentication.js"></script>
 
 </body>
 
