Added firestore callbacks to firebaseAPI.js

--- a/main.html
+++ b/main.html
@@ -4,10 +4,8 @@
 <head>
     <title>My BCIT Project</title>
     <meta name="Volunteer Management App Main" content="VMA Main">
-    <meta name="author" content="BBY13"
-    <!------------------------>
-    <!-- Required meta tags -->
-    <!------------------------>
+    <meta name="author" content="BBY13">
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
