--- a/login.html
+++ b/login.html
@@ -38,14 +38,15 @@
 
 <body>
     <!------------------------------>
-    
-    
+
+
     <!------------------------------>
 
     <!-- our own navbar goes here -->
     <nav id="navbar"></nav>
 
     <!-- the body of your page goes here -->
+
     <div class="container">
         <h1>Let's Login!</h1>
     </div>
@@ -60,6 +61,8 @@
     <!---------------------------------------------->
     <script src="./scripts/firebaseAPI.js"></script>
     <script src="./scripts/skeleton.js"></script>
+
+    <!-- JScript specific to the login page - authentication -->
     <script src="./scripts/authentication.js"></script>
 
 </body>
