--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   <!-- Your own JavaScript functions go here    -->
   <!---------------------------------------------->
   <script src="./scripts/firebaseAPI.js"></script>
-  <script src="./scripts/skeleton.js"></script>
+  <script src="./scripts/skeleton-index.js"></script>
   <script src="./scripts/authentication"></script>
 
 </body>
