--- a/login.html
+++ b/login.html
@@ -60,7 +60,7 @@
     <!-- Your own JavaScript functions go here    -->
     <!---------------------------------------------->
     <script src="./scripts/firebaseAPI.js"></script>
-    <script src="./scripts/skeleton.js"></script>
+    <script src="./scripts/skeleton-index.js"></script>
 
     <!-- JScript specific to the login page - authentication -->
     <script src="./scripts/authentication.js"></script>
