Added style.css to all populated pages

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
   </script>
 
+
   <!-------------------------------------------------------->
   <!-- Firebase 8 Library related CSS, JS, JQuery go here -->
   <!-------------------------------------------------------->
@@ -33,7 +34,7 @@
   <!-- Other libraries and styles of your own -->
   <!-------------------------------------------->
   <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
-  <!-- <link rel="stylesheet" href="./styles/style.css"> -->
+  <link rel="stylesheet" href="./styles/style.css">
 
 </head>
 
@@ -44,8 +45,8 @@
 
   <!-- Login Sign-up page Header -->
   <div class="jumbotron">
-    <h1 class="display-4">VMA - Volunteer Management App</h1>
-    <p class="lead">Creating a smooth experience for organizations and volunteers alike!</p>
+    <h1 class="display-4" id="toptext">VMA - Volunteer Management App</h1>
+    <p class="lead" id="subtoptext">Creating a smooth experience for organizations and volunteers alike!</p>
     <hr class="my-4">
     <p>This is a web application that helps users organize and apply for tasks that require volunteers.</p>
     <p class="lead">
