--- a/login-org.html
+++ b/login-org.html
@@ -32,24 +32,24 @@
     <!-- Other libraries and styles of your own -->
     <!-------------------------------------------->
     <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
-    <!-- <link rel="stylesheet" href="./styles/style.css"> -->
+    <link rel="stylesheet" href="./styles/style.css">
 
 </head>
 
 <body>
-    <!------------------------------>
-
-
-    <!------------------------------>
-
+    
     <!-- our own navbar goes here -->
     <nav id="navbar"></nav>
 
     <!-- the body of your page goes here -->
 
-    <div class="container">
+    <div class="container" id="toptext">
         <h1>Volunteer Leaders and Event Organizers, Let's Login!</h1>
     </div>
+
+    <br>
+    <br>
+
     <div id="firebaseui-auth-container"></div>
     <div id="loader">Loading...</div>
 
