--- a/main-org.html
+++ b/main-org.html
@@ -32,7 +32,7 @@
     <!-- Other libraries and styles of your own -->
     <!-------------------------------------------->
     <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
-    <!-- <link rel="stylesheet" href="./styles/style.css"> -->
+    <link rel="stylesheet" href="./styles/style.css">
 
 </head>
 
@@ -42,9 +42,9 @@
     <!-- our own navbar goes here -->
     <nav id="navbar"></nav>
 
-    <div class="container-fluid bg-secondary text-dark p-5">
-        <div class="container bg-secondary p-5">
-            <h1 class="display-4">Welcome Volunteer Leaders and Event Organizers!</h1>
+    <div class="container-fluid bg-light text-dark p-5">
+        <div class="container bg-light p-5">
+            <h1 class="display-4" id="toptext">Welcome Volunteer Leaders and Event Organizers!</h1>
         </div>
     </div>
     <!------------------------------>
