--- a/login.html
+++ b/login.html
@@ -32,7 +32,7 @@
     <!-- Other libraries and styles of your own -->
     <!-------------------------------------------->
     <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
-    <!-- <link rel="stylesheet" href="./styles/style.css"> -->
+    <link rel="stylesheet" href="./styles/style.css">
 
 </head>
 
@@ -47,9 +47,13 @@
 
     <!-- the body of your page goes here -->
 
-    <div class="container">
+    <div class="container" id="toptext">
         <h1>Let's Login!</h1>
     </div>
+
+    <br>
+    <br>
+
     <div id="firebaseui-auth-container"></div>
     <div id="loader">Loading...</div>
 
