Updated linking to the pages folder

--- a/pages/index.html
+++ b/pages/index.html
@@ -50,7 +50,7 @@
     <hr class="my-4">
     <p>This is a web application that helps users organize and apply for tasks that require volunteers.</p>
     <p class="lead">
-      <a class="btn btn-light btn-lg" href="login.html" role="button">Login / Sign-up</a>
+      <a class="btn btn-light btn-lg" href="/pages/login.html" role="button">Login / Sign-up</a>
     </p>
   </div>
 
