Added functional links to all subfolders

--- a/pages/all-tasks.html
+++ b/pages/all-tasks.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>My BCIT Project</title>
-    <meta name="Volunteer Management App Main" content="VMA Main">
+    <meta name="Volunteer Management App Main" content="VMA Main">6
     <meta name="author" content="BBY13">
 
     <meta charset="utf-8">
