--- a/pages/index.html
+++ b/pages/index.html
@@ -34,7 +34,7 @@
   <!-- Other libraries and styles of your own -->
   <!-------------------------------------------->
   <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="../styles/style.css">
 
 </head>
 
@@ -72,9 +72,9 @@
   <!---------------------------------------------->
   <!-- Your own JavaScript functions go here    -->
   <!---------------------------------------------->
-  <script src="./scripts/firebaseAPI.js"></script>
-  <script src="./scripts/skeleton-index.js"></script>
-  <script src="./scripts/authentication"></script>
+  <script src="../scripts/firebaseAPI.js"></script>
+  <script src="../scripts/skeleton-index.js"></script>
+  <script src="../scripts/authentication"></script>
 
 </body>
 
