--- a/pages/login.html
+++ b/pages/login.html
@@ -32,7 +32,7 @@
     <!-- Other libraries and styles of your own -->
     <!-------------------------------------------->
     <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="../styles/style.css">
 
 </head>
 
@@ -63,11 +63,11 @@
     <!---------------------------------------------->
     <!-- Your own JavaScript functions go here    -->
     <!---------------------------------------------->
-    <script src="./scripts/firebaseAPI.js"></script>
-    <script src="./scripts/skeleton-index.js"></script>
+    <script src="../scripts/firebaseAPI.js"></script>
+    <script src="../scripts/skeleton-index.js"></script>
 
     <!-- JScript specific to the login page - authentication -->
-    <script src="./scripts/authentication.js"></script>
+    <script src="../scripts/authentication.js"></script>
 
 </body>
 
