--- a/pages/all-tasks.html
+++ b/pages/all-tasks.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>My BCIT Project</title>
-    <meta name="Volunteer Management App Main" content="VMA Main">6
+    <meta name="Volunteer Management App Main" content="VMA Main">
     <meta name="author" content="BBY13">
 
     <meta charset="utf-8">
@@ -33,7 +33,7 @@
     <!-- Other libraries and styles of your own -->
     <!-------------------------------------------->
     <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="../styles/style.css">
 
 </head>
 
@@ -56,9 +56,9 @@
     <!---------------------------------------------->
     <!-- Your own JavaScript functions go here    -->
     <!---------------------------------------------->
-    <script src="./scripts/firebaseAPI.js"></script>
-    <script src="./scripts/skeleton.js"></script>
-    <script src="./scripts/authentication.js"></script>
+    <script src="../scripts/firebaseAPI.js"></script>
+    <script src="../scripts/skeleton.js"></script>
+    <script src="../scripts/authentication.js"></script>
 
 </body>
 
