--- a/text/nav.html
+++ b/text/nav.html
@@ -8,10 +8,10 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/pages/main.html">Home</a>
+          <a class="nav-link active" aria-current="page" href="../pages/main.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/pages/all-tasks.html">All Tasks</a>
+          <a class="nav-link" href="../pages/all-tasks.html">All Tasks</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Notifications</a>
