--- a/text/nav.html
+++ b/text/nav.html
@@ -17,7 +17,7 @@
           <a class="nav-link" href="#">Notifications</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Calendar</a>
+          <a class="nav-link" href="../pages/calendar.html">Calendar</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Posts</a>
