--- a/text/nav.html
+++ b/text/nav.html
@@ -28,6 +28,9 @@
         <li class="nav-item">
           <a class="nav-link" href="#">Feedback</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../pages/forum.html">Forum</a>
+        </li>
       </ul>
     </div>
   </div>
