testing the branch commit

--- a/pages/all-tasks.html
+++ b/pages/all-tasks.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>My BCIT Project</title>
+    <title>All Tasks</title>
     <meta name="Volunteer Management App Main" content="VMA Main">
     <meta name="author" content="BBY13">
 
