--- a/pages/all-tasks.html
+++ b/pages/all-tasks.html
@@ -85,6 +85,7 @@
     <script src="../scripts/firebaseAPI.js"></script>
     <script src="../scripts/skeleton.js"></script>
     <script src="../scripts/authentication.js"></script>
+    <script src="../scripts/all-tasks.js"></script>
 
 </body>
 
