--- a/pages/main.html
+++ b/pages/main.html
@@ -17,7 +17,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
     </script>
-    
+
 
     <!-------------------------------------------------------->
     <!-- Firebase 8 Library related CSS, JS, JQuery go here -->
@@ -45,7 +45,7 @@
 
     <div class="container-fluid bg-light text-dark p-5">
         <div class="container bg-light p-5">
-            <h1 class="display-4" id="toptext">Welcome Volunteers!</h1>
+            <h1 class="display-4" id="toptext">Welcome, <span id="name-goes-here">!</h1>
         </div>
     </div>
     <!------------------------------>
@@ -59,6 +59,7 @@
     <script src="../scripts/firebaseAPI.js"></script>
     <script src="../scripts/skeleton.js"></script>
     <script src="../scripts/authentication.js"></script>
+    <script src="../scripts/main.js"></script>
 
 </body>
 
