Read More button on All Tasks page redirects to all-tasks-details page.

--- a/pages/all-tasks.html
+++ b/pages/all-tasks.html
@@ -58,7 +58,7 @@
                 <p class="card-city">placeholder</p>
                 <br>
                 <p class="card-date">placeholder</p>
-                <a href="#" class="btn btn-light" style="float: right">Read more</a>
+                <a href="../pages/all-tasks-details.html" class="btn btn-light" style="float: right">Read more</a>
             </div>
         </div>
     </template>
