--- a/pages/all-tasks-details.html
+++ b/pages/all-tasks-details.html
@@ -45,7 +45,7 @@
 
     <div class="container-fluid bg-light text-dark p-5">
         <div class="container bg-light p-5">
-            <h1 class="display-4">Welcome, <span id="name-goes-here"> !</span></h1>
+            <h1 class="display-4">Each Task in Greater Details</h1>
             <hr>
             <p>Quote of the day: <span id="quote-goes-here">...</span></p>
         </div>
