--- a/pages/all-tasks-details.html
+++ b/pages/all-tasks-details.html
@@ -38,40 +38,78 @@
 </head>
 
 <body>
-    <!------------------------------>
 
     <!-- our own navbar goes here -->
     <nav id="navbar"></nav>
 
-    <div class="container-fluid bg-light text-dark p-5">
-        <div class="container bg-light p-5">
-            <h1 class="display-4">Each Task in Greater Details</h1>
-            <hr>
-            <p>Quote of the day: <span id="quote-goes-here">...</span></p>
-        </div>
-    </div>
-
-    <template id="taskCardTemplate">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">placeholder</h5>
-                <p class="card-city">placeholder</p>
+    <!-- the body of your page goes here -->
+    <h1>Details for <span id="TaskName"></span></h1>
+    <form>
+        <div class="form-group">
+            <label for="exampleFormControlInput1">Add a title</label>
+            <input type="text" class="form-control" id="title" placeholder="Title">
+        </div><br>
+        <div class="form-group">
+            <label for="exampleFormControlSelect1">What was the level of the hike?</label>
+            <select class="form-control" id="level">
+                <option>Hard</option>
+                <option>Moderate</option>
+                <option>Easy</option>
+            </select>
+            <br>
+            <div class="form-group">
+                <label for="exampleFormControlSelect1">Which season did you do the hike?</label>
+                <select class="form-control" id="season">
+                    <option>Fall</option>
+                    <option>Winter</option>
+                    <option>Spring</option>
+                    <option>Summer</option>
+                </select>
                 <br>
-                <p class="card-date">placeholder</p>
-                <a href="#" class="btn btn-light" style="float: right">Read more</a>
             </div>
-        </div>
-    </template>
+            <div class="form-group">
+                <label for="exampleFormControlTextarea1">What did you think of the trail?</label>
+                <textarea class="form-control" id="description" rows="3"></textarea>
+            </div>
+            <br>
+            <!--Flooded-->
+            <label>Flooded <span style="display:inline-block; width: 26pt;"></span></label>
 
-    <!-- Sets a placeholder for the task templates to be placed -->
-    <div class="container">
-        <h1>Tasks that require volunteers to sign up:</h1>
-        <!-- Here is container for cards  -->
-        <div class="container">
-            <div id="taskCardGroup" class="row row-cols-auto">
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="flooded" value="Yes">
+                <label>Yes</label>
+            </div>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="flooded" value="No">
+                <label>No</label>
+            </div>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="flooded" value="unSure" checked="">
+                <label>Not sure</label>
+            </div>
+            <br>
+            <!--Scramble-->
+            <label>Scramble <span style="display:inline-block; width: 20pt;"></span></label>
+
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="scrambled" value="Yes">
+                <label>Yes</label>
+            </div>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="scrambled" value="No">
+                <label>No</label>
+            </div>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="scrambled" value="unSure" checked="">
+                <label>Not sure</label>
+            </div>
+
+            <br>
+            <div class="d-flex justify-content-end">
+                <button type="button" class="btn btn-lg btn-primary pull-right" onclick="writeReview()">Submit</button>
             </div>
         </div>
-    </div>
+    </form>
 
 
 
@@ -83,8 +121,7 @@
     <!---------------------------------------------->
     <script src="../scripts/firebaseAPI.js"></script>
     <script src="../scripts/skeleton.js"></script>
-    <script src="../scripts/authentication.js"></script>
-    <script src="../scripts/all-tasks.js"></script>
+    <script src="../scripts/all-tasks-details.js"></script>
 
 </body>
 
