--- a/pages/main.html
+++ b/pages/main.html
@@ -45,9 +45,11 @@
 
     <div class="container-fluid bg-light text-dark p-5">
         <div class="container bg-light p-5">
-            <h1 class="display-4" id="toptext">Welcome, <span id="name-goes-here">!</h1>
+            <h1 class="display-4" id="toptext">Welcome, <span id="name-goes-here"></span>!</h1>
         </div>
     </div>
+
+
     <!------------------------------>
 
     <!-- our own footer goes here-->
