--- a/text/nav.html
+++ b/text/nav.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">VMA</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -11,7 +11,7 @@
           <a class="nav-link active" aria-current="page" href="../pages/main.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../pages/all-tasks.html">All Tasks</a>
+          <a class="nav-link" href="../pages/all-tasks.html">Tasks</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Notifications</a>
