--- a/pages/all-tasks.html
+++ b/pages/all-tasks.html
@@ -53,7 +53,7 @@
         </div>
     </div>
 
-    <!-- <template id="taskCardTemplate">
+    <template id="taskCardTemplate">
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title">placeholder</h5>
@@ -63,7 +63,7 @@
                 <a href="../pages/all-tasks-details.html" class="btn btn-light" style="float: right">Read more</a>
             </div>
         </div>
-    </template> -->
+    </template>
 
 
 
