Added buttons at the end of the all task page to allow the user to apply for the task or go back to the all-tasks page.

--- a/pages/all-tasks-details.html
+++ b/pages/all-tasks-details.html
@@ -53,6 +53,9 @@
             <h3>Location: <span id="taskLoc"></span></h3>
             <h3>Description:</h3>
             <h4 id="details">Placeholder</h4>
+            <a id="apply" href=""><button>Apply</button></a>
+            <a href="./all-tasks.html"><button>Back</button></a>
+
 
 
         </div>
