--- a/pages/main.html
+++ b/pages/main.html
@@ -49,6 +49,35 @@
         </div>
     </div>
 
+    <template id="taskCardTemplate">
+        <div class="list-group">
+            <a href="../pages/all-tasks-details.html" class="list-group-item list-group-item-action d-flex gap-3 py-3"
+                aria-current="true">
+                <img src="https://github.com/twbs.png" alt="twbs" width="32" height="32"
+                    class="rounded-circle flex-shrink-0">
+                <div class="d-flex gap-2 w-100 justify-content-between">
+                    <div>
+                        <h6 class="mb-0 card-title">task name</h6>
+                        <small class="mb-0 opacity-75 card-city">location</small>
+                        <p class="mb-0 card-description">Description</p>
+                    </div>
+                    <p class="mb-0 opacity-50 text-nowrap card-date">date</p>
+                </div>
+            </a>
+        </div>
+    </template>
+
+    <!-- Sets a placeholder for the task templates to be placed -->
+    <div class="container">
+        <h1 class="display-4" style="text-align: left;">My Tasks:</h1>
+        <!-- Here is container for cards  -->
+        <div class="container">
+            <div id="taskCardGroup" class="row row-cols-auto">
+            </div>
+        </div>
+    </div>
+
+
 
     <!------------------------------>
 
