designed the task page more, designed the task info page, tried to get the calendar to work

--- a/pages/all-tasks.html
+++ b/pages/all-tasks.html
@@ -44,11 +44,11 @@
     <!-- our own navbar goes here -->
     <nav id="navbar"></nav>
 
-    <div class="container-fluid bg-light text-dark p-5">
+    <div class="container-fluid bg-light text-dark p-3">
         <div class="container bg-light p-5">
             <h1 class="display-4" id="toptext">Tasks</h1>
             <hr>
-            <img src="../images/tasksImg.png" alt="tasksImg" width="567" height="287" class="center">
+            <img src="../images/tasksImg.png" alt="tasksImg" class="center">
             <!-- <p>Quote of the day: <span id="quote-goes-here">...</span></p> -->
         </div>
     </div>
@@ -65,6 +65,7 @@
                         <p class="mb-0 card-description">Description</p>
                     </div>
                     <p class="mb-0 opacity-50 text-nowrap card-date">date</p>
+                    <p class="mb-0 opacity-100 right-bottom">+</p>
                 </div>
             </a>
         </div>
