--- a/pages/all-tasks-details.html
+++ b/pages/all-tasks-details.html
@@ -44,8 +44,14 @@
 
     <!-- the body of your page goes here -->
     <!-- Title of Task pulled from the local storage -->
-    <h1>Details for <span id="TaskName"></span></h1>
-    <div class="taskDisplay">
+    <div class="container-fluid bg-light text-dark p-1">
+        <div class="container bg-light p-1">
+            <h1 class="display-4" id="toptext">Task Details</h1>
+            <hr>
+        </div>
+    </div>
+
+    <!-- <div class="taskDisplay">
         <div>
             <h2 id="title">Placeholder</h2>
             <h3>Required Date: <span id="taskDate">Placeholder</span></h3>
@@ -55,16 +61,27 @@
             <h4 id="details">Placeholder</h4>
             <a id="apply" href=""><button>Apply</button></a>
             <a href="./all-tasks.html"><button>Back</button></a>
+        </div>
+    </div> -->
 
-
-
+    
+    <div class="taskDisplay">
+        <div class="p-5 mb-4 bg-light rounded-3">
+            <div class="h-100 p-5 text-white bg-dark rounded-3">
+                <h1 id="title">title</h1>
+                <h5>Date: </h5>
+                <p id="taskDate">date</p>
+                <h5>City:</h5> 
+                <p id="taskCity">city</p>
+                <h5>Location: </h5>
+                <p id="taskLoc">location</p>
+                <h5>Description: </h5> 
+                <p id="details"> description</p>
+                <br>
+                <a id="apply" href=""><button class="btn btn-outline-light" type="button">Sign up</button></a>
+            </div>
         </div>
     </div>
-
-
-
-
-
 
     <!-- our own footer goes here-->
     <nav id="footer"></nav>
