added photos for each task (not hard coded photos), designed the main page tasks, fixed the problem with applying for tasks

--- a/pages/all-tasks-details.html
+++ b/pages/all-tasks-details.html
@@ -78,7 +78,7 @@
                 <h5>Description: </h5> 
                 <p id="details"> description</p>
                 <br>
-                <a id="apply" href=""><button class="btn btn-outline-light" type="button">Sign up</button></a>
+                <button onclick="doIt()" class="btn btn-outline-light">Sign up</button>
             </div>
         </div>
     </div>
