--- a/pages/main.html
+++ b/pages/main.html
@@ -34,6 +34,7 @@
     <!-------------------------------------------->
     <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
     <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="https://getbootstrap.com/docs/5.1/examples/list-groups/list-groups.css">
 
 </head>
 
@@ -46,6 +47,7 @@
     <div class="container-fluid bg-light text-dark p-5">
         <div class="container bg-light p-5">
             <h1 class="display-4" id="toptext">Welcome, <span id="name-goes-here"></span>!</h1>
+            <hr>
         </div>
     </div>
 
@@ -62,6 +64,7 @@
                         <p class="mb-0 card-description">Description</p>
                     </div>
                     <p class="mb-0 opacity-50 text-nowrap card-date">date</p>
+                    <p class="mb-0 opacity-100 right-bottom">+</p>
                 </div>
             </a>
         </div>
