reduced the navBar to keep only the functional menu + the notification tab for now.

--- a/text/nav.html
+++ b/text/nav.html
@@ -20,16 +20,10 @@
           <a class="nav-link" href="../pages/calendar.html">Calendar</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Posts</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Training</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Feedback</a>
-        </li>
-        <li class="nav-item">
           <a class="nav-link" href="../pages/forum.html">Forum</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../pages/index.html">Sign Out</a>
         </li>
       </ul>
     </div>
