added a sign out option on the navBar that redirects to the index page. Changed some names on navBar.

--- a/text/nav.html
+++ b/text/nav.html
@@ -11,17 +11,18 @@
           <a class="nav-link active" aria-current="page" href="../pages/main.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../pages/all-tasks.html">Tasks</a>
+          <a class="nav-link" href="../pages/calendar.html">My Schedule</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../pages/forum.html">The Forum</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../pages/all-tasks.html">All Tasks</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Notifications</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="../pages/calendar.html">Calendar</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="../pages/forum.html">Forum</a>
-        </li>
+
         <li class="nav-item">
           <a class="nav-link" href="../pages/index.html">Sign Out</a>
         </li>
