--- a/pages/calendar.html
+++ b/pages/calendar.html
@@ -48,14 +48,13 @@
 
     <div class="container-fluid bg-light text-dark p-5">
         <div class="container bg-light p-5">
-            <h1 class="display-4" id="toptext">Calendar</h1>
+            <h1 class="display-4" id="toptext">My Volunteer Schedule</h1>
         </div>
     </div>
 
     <template id="taskCardTemplate">
         <a href="../pages/all-tasks-details.html"
-            class="list-group-item list-group-item-action d-flex gap-3 py-3 design"
-            aria-current="true">
+            class="list-group-item list-group-item-action d-flex gap-3 py-3 design" aria-current="true">
             <img src="https://github.com/twbs.png" alt="twbs" width="32" height="32"
                 class="rounded-circle flex-shrink-0">
             <div class="d-flex gap-2 w-100 justify-content-between">
@@ -70,7 +69,7 @@
         </a>
     </template>
 
-    
+
 
 
 
